examples/fail/RWelim.stl
/** WRelim **/
global x; 
local l; 

/** Optimised **/ 
read(x,l); 

/** Unoptimised **/ 
read(x,l); 
write(x,l); 
